@@ -5,6 +5,7 @@ gae-wiki 1.2
 - Fixed misplaced Edit/History tabs.
 - Fixed viewing particular page revisions.
 - Fixed /w/data/import.
+- Fixed rendering of unlabelled links in Markdown.
 - Added some caching to increase performance.
 - Added support for time zones.
 - Added a way to disable anonymous edits, but allow all logged in users.
